<?xml version="1.0"?>
<package format="2">
  <name>joy_sub</name>
  <version>0.0.0</version>
  <description>The joy_sub package</description>

  <maintainer email="euphuism.s@icloud.com">Euphuism</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_export_depend>roscpp</build_export_depend>
  <exec_depend>roscpp</exec_depend>

  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
